<resources>
    <string name="app_name">TAMAS</string>
    <string name="power_is_in_your_hands">Power is in your hands</string>
    <string name="welcome_to_tamas">Welcome To TAMAS</string>
    <string name="apply">Apply</string>
    <string name="usernameHint">Username??</string>
    <string name="ApplicationErrors"></string>
    <string name="browse_job_postings">Browse Job Postings</string>
    <string name="create_job_application">Create Job Application</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Login -->
    <string name="prompt_user">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_Username">This username address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_testlogin">Sign in</string>

    <!-- Strings related to Modify Profile -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="back">back</string>
    <string name="browse_applications">Browse Job Offers</string>
    <string name="apply_to_job">Apply to Job</string>
    <string name="modify_profile">Modify Profile</string>
    <string name="view_your_evaluations">View your Evaluations</string>
    <string name="accept_job_offer">Accept Job Offer</string>
    <string name="no_job_offers_available">No Job Offers Available</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="there_was_a_problem_loading_your_profile">There was a problem loading your profile</string>
    <string name="fields_left_untouched_will_not_be_altered">Fields left untouched will not be altered</string>
    <string name="enter_new_password">Enter new Password</string>
    <string name="enter_new_first_name">Enter new First Name</string>
    <string name="enter_new_last_name">Enter new Last Name</string>
    <string name="please_log_in_to_use_tamas">Please log in to use Tamas</string>
</resources>
