<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.mcgill.ecse321.group10.tamas.MainActivity">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_to_tamas"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/power_is_in_your_hands"
        android:textColor="#000000" />

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Welcome"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/Welcome"
        android:layout_marginBottom="130dp"
        android:onClick="createJobAppClicked"
        android:text="@string/create_job_application" />

    <Button
        android:id="@+id/BrowseButton"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:enabled="false"
        android:text="@string/browse_job_postings" />

    <Button
        android:id="@+id/Login"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/EditProfile"
        android:layout_alignEnd="@+id/EditProfile"
        android:layout_alignRight="@+id/EditProfile"
        android:layout_marginBottom="59dp"
        android:enabled="false"
        android:text="@string/login" />

    <Button
        android:id="@+id/EditProfile"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BrowseButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:enabled="false"
        android:text="@string/edit_profile" />


</RelativeLayout>
